# tuonella-sift

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  build_external_sort.sh  config.json  config_cuda.json  cpu.config.json  cuda.config.json  external_sort_config.json  test_cuda.sh
docs/: algorithm.md  cuda_implementation.md  requirements.md
examples/: complete_algorithm_demo.rs  performance_optimizations_demo.rs  test_algorithm_streaming.rs  test_composite_deduplication.rs  test_dynamic_memory_management.rs  test_error_handling_recovery.rs  test_gpu_processing.rs  test_memory_manager.rs  test_resource_cleanup.rs  test_resource_query.rs
scripts/: validate_config.sh
src/: config.rs  constants.rs  cuda_processor.rs  deduplicator.rs  lib.rs  main.rs  patterns.rs  record.rs  utils.rs
src/config/: mod.rs  model.rs  tests.rs
src/core/: async_error_handler.rs  async_parallel_processor.rs  batch_writer.rs  buffer_pool.rs  checkpoint.rs  checkpoint_handler.rs  deduplication.rs  double_buffer.rs  error_handler.rs  external_sort_dedup.rs  memory_manager.rs  mod.rs  optimized_io.rs  parallel_file_processor.rs  parallel_processor.rs  performance_analysis.rs  performance_monitor.rs  pipeline_processor.rs  record.rs  recovery_manager.rs  resource_manager.rs  simd_string_ops.rs  validation.rs
src/cuda/: adaptive_launcher.rs  adaptive_memory_manager.rs  mod.rs  multi_stream_processor.rs  pinned_memory_manager.rs  processor.rs  tests.rs  vectorized_kernels.rs
src/external_sort/: README.md  checkpoint.rs  chunk.rs  config.rs  constants.rs  merger.rs  mod.rs  processor.rs  record.rs  tests.rs
src/utils/: io.rs  mod.rs  system.rs
src_backup/: cuda_processor.rs  deduplicator.rs  main.rs
tests/: integration_tests.rs  main_tests.rs
