[package]
name = "tuonella-sift"
version = "0.1.5"
edition = "2021"
description = "A high-performance CSV deduplication tool that sifts through massive datasets like Tuonella sifts souls"
authors = ["Tuonella Sift Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bike-mazzel/tuonella-sift"
keywords = ["csv", "deduplication", "data-processing", "performance", "tuonella", "osint"]
categories = ["command-line-utilities", "data-structures"]

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
futures = "0.3"

# CSV processing and data handling
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# String processing and fuzzy matching
regex = "1.10"
url = "2.5"
unicode-normalization = "0.1"
ahash = "0.8"
once_cell = "1.19"

# Memory management and performance
memmap2 = "0.9"
crossbeam = "0.8"
parking_lot = "0.12.4"

# System utilities
sysinfo = "0.35.1"
walkdir = "2.4"
clap = { version = "4.5.39", features = ["derive"] }
num_cpus = "1.17.0"
glob = "0.3"
rand = "0.9.1"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] }

# Optional CUDA support (feature-gated)
cudarc = { version = "0.16.4", optional = true, features = ["driver"] }
log = "0.4.27"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
cuda = ["cudarc", "cudarc/cuda-version-from-build-system"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 1

[[bin]]
name = "tuonella-sift"
path = "src/bin/tuonella-sift.rs"

[lib]
name = "tuonella_sift"
path = "src/lib.rs"
