[package]
name = "tuonella-sift"
version = "0.7.0"
edition = "2021"
description = "A high-performance CSV deduplication tool that sifts through massive datasets like Tuonella sifts souls"
authors = ["Tuonella Sift Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bike-mazzel/tuonella-sift"
keywords = ["csv", "deduplication", "data-processing", "performance", "tuonella", "osint"]
categories = ["command-line-utilities", "data-structures"]

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System utilities and CLI
sysinfo = "0.35.2"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0"

# Memory management (used by CUDA modules)
parking_lot = "0.12.4"

# Optional CUDA support (feature-gated)
cudarc = { version = "0.16.4", optional = true, features = ["driver"] }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
cuda = ["cudarc", "cudarc/cuda-version-from-build-system"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 1

[[bin]]
name = "tuonella-sift"
path = "src/main.rs"

[lib]
name = "tuonella_sift"
path = "src/lib.rs"
